--- a/style.css
+++ b/style.css
@@ -482,6 +482,18 @@
       text-align: justify;
     }
 
+    @media screen and (max-width: 768px) {
+		.container-1-Produktdaten {
+			padding: 0;
+		}
+		.product-data {
+			padding: 0;
+		}
+		
+		.descripcion .label {
+			margin-left: 30%;
+		}
+    }
 /* ----------------------- Ende der Styles für die Produktseite ------------------------------------------- */
 
 /* ----------------------- Anfang der Styles für die Seite Datenschutz------------------------------------- */
@@ -498,6 +510,7 @@
         padding-left: 5%;
         padding-right: 5%;
       }
+
     }
 
 /* ----------------------- Ende der Styles für die Seite Datenschutz--------------------------------------- */
