--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     }
 
     html {
-      font-family: Arial, Helvectia, sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     html p {
@@ -21,7 +21,7 @@
     }
 
     h1 {
-      font-size: 40px;
+      font-size: 35px;
       text-align: center;
     }
 
@@ -49,29 +49,62 @@
     }
 
     /*------------------------------ Anfang Style für die Navigationsleiste ---------------------------- */
+
+    /*-------------------Styles damit Navigationsleiste im Bild ist ----------------*/
+    .navigation-im-frontpicture{
+      position: top;
+      /* position: fixed; */
+      /* top: 0; */
+      width: 100%;
+      background-color: transparent;
+      z-index:1;
+      padding-left: 30%;
+      padding-right: 30%;
+    }
+
+    .Rest-float-right{
+      float: right;
+    }
+
+    .wrapper_header{
+      margin: auto;
+    }
+
+
+
+
+
+
+
+
+
+
+
     .topnav img {
-      height: 20px;
+      height: 25px;
     }
 
     .topnav {
       overflow: hidden;
-      background-color: #68C902;
+      background-color: none;
       margin: 0px auto;
     }
 
     .topnav a {
       float: left;
       display: block;
-      color: #FFFFFF;
+      color: white;
+      text-shadow: 2px 2px 5px black;
+      font-weight: bold;
       text-align: center;
-      padding: 14px 16px;
+      padding: 14px 14px;
       text-decoration: none;
       font-size: 17px;
     }
 
     .active {
-      background-color: #B6E306;
-      color: #FFFFFF;
+      background-color: #77A1D9;
+      color: white;
     }
 
     .topnav .icon {
@@ -79,16 +112,17 @@
     }
 
     .dropdown {
-      float: left;
-      overflow: hidden;
+      float: right;
     }
 
     .dropdown .dropbtn {
       font-size: 17px;
       border: none;
       outline: none;
-      color: #FFFFFF;
-      padding: 14px 16px;
+      color: white;
+      text-shadow: 2px 2px 5px black;
+      font-weight: bold;
+      padding: 14px 14px;
       background-color: inherit;
       font-family: inherit;
       margin: 0;
@@ -97,15 +131,15 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #FFFFFF;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      background-color: #77A1D9;
+      min-width: 102px;
+      /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
       z-index: 1;
     }
 
     .dropdown-content a {
       float: none;
-      color: black;
+      color: white;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
@@ -113,13 +147,14 @@
     }
 
     .topnav a:hover, .dropdown:hover .dropbtn {
-      background-color: #555;
-      color: #FFFFFF;
+      background-color: #77A1D9;
+      color: white;
+      text-shadow: none;
     }
 
     .dropdown-content a:hover {
-      background-color: #ddd;
-      color: black;
+      background-color: white;
+      color: #77A1D9;
     }
 
     .dropdown:hover .dropdown-content {
@@ -155,6 +190,27 @@
         width: 100%;
         text-align: left;
       }
+
+      .Rest-float-right{
+        float: left;
+      }
+      .home-ausblenden{
+        display: none;
+      }
+
+    }
+
+    @media screen and (max-width: 1200px) {
+    .navigation-im-frontpicture{
+      padding-left: 0;
+      padding-right: 0;
+    }
+    }
+
+    @media screen and (min-width: 600px) {
+    .home-ausblenden{
+      display: none;
+    }
     }
 
     /*------------------------------ Ende Style für die Navigationsleiste ---------------------------- */
@@ -171,12 +227,13 @@
       background-size: cover;
       background-position: center;
       position: relative;
-      padding: 15%;
       background-attachment: fixed;
     }
 
+
+
     /* Der Text mittig auf dem FrontPicture Startseite*/
-    .FrontPicture-Text-Startseite {
+    .FrontPicture-Text-Startseite{
       text-align: center;
       position: absolute;
       top: 50%;
@@ -186,6 +243,7 @@
       text-shadow: 5px 5px 10px black;
       font-weight: bold;
     }
+
 
     .werbespruch-startseite {
       background-color: white;
@@ -331,7 +389,6 @@
       background-size: cover;
       background-position: center;
       position: relative;
-      padding: 15%;
       background-attachment: fixed;
     }
 
@@ -522,6 +579,11 @@
 /* ----------------------- Ende der Styles für die Seite Datenschutz--------------------------------------- */
 
 /*Beginn des Designs der Seite Kontakt*/
+
+.navigation-auf-kontaktseite{
+  background-color: #68C902;
+}
+
     .contact {
       padding-left: 10%;
       padding-right: 10%;
@@ -657,6 +719,24 @@
 
 /*Ende des Designs der Seite Kontakt*/
 /* ----------------------- Anfang des Styles für die Seite Übers uns -------------------------------------- */
+
+.wrapper-über-uns{
+  background-color: #BDD9F2;
+}
+
+/*Das große Bild am Anfang der Über uns Seite*/
+.FrontPicture-Über-uns {
+  background-color: lightblue;
+  background-image: url('neues_Logo_original.jpeg');
+  height: 75%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+
+
     .aboutus {
       padding-left: 10%;
       padding-right: 10%;
@@ -728,6 +808,12 @@
       .employee-text {
         width: 100%;
         margin-left: 0%;
+      }
+    }
+
+    @media screen and (min-width: 1000px) {
+      .FrontPicture-Über-uns {
+        background-position: initial;
       }
     }
 
