--- a/style.css
+++ b/style.css
@@ -50,11 +50,9 @@
 
     /*------------------------------ Anfang Style für die Navigationsleiste ---------------------------- */
 
-    /*-------------------Styles damit Navigationsleiste im Bild ist ----------------*/
+    /*------------Styles damit Navigationsleiste im Bild ist --------------------*/
     .navigation-im-frontpicture{
       position: top;
-      /* position: fixed; */
-      /* top: 0; */
       width: 100%;
       background-color: transparent;
       z-index:1;
@@ -70,15 +68,7 @@
       margin: auto;
     }
 
-
-
-
-
-
-
-
-
-
+/* -----------Styles damit Navigationsleiste im Bild ist ----------------- */
 
     .topnav img {
       height: 25px;
@@ -133,14 +123,12 @@
       position: absolute;
       background-color: #77A1D9;
       min-width: 102px;
-      /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
       z-index: 1;
     }
 
     .dropdown-content a {
       float: none;
       color: white;
-      padding: 12px 16px;
       text-decoration: none;
       display: block;
       text-align: left;
@@ -161,7 +149,7 @@
       display: block;
     }
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 768px) {
       .topnav a:not(:first-child), .dropdown .dropbtn {
         display: none;
       }
@@ -169,9 +157,7 @@
         float: right;
         display: block;
       }
-    }
 
-    @media screen and (max-width: 600px) {
       .topnav.responsive {position: relative;}
       .topnav.responsive .icon {
         position: absolute;
@@ -207,7 +193,7 @@
     }
     }
 
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 768px) {
     .home-ausblenden{
       display: none;
     }
@@ -229,7 +215,6 @@
       position: relative;
       background-attachment: fixed;
     }
-
 
 
     /* Der Text mittig auf dem FrontPicture Startseite*/
@@ -720,22 +705,27 @@
 /*Ende des Designs der Seite Kontakt*/
 /* ----------------------- Anfang des Styles für die Seite Übers uns -------------------------------------- */
 
-.wrapper-über-uns{
-  background-color: #BDD9F2;
-}
+  .wrapper-über-uns{
+    background-color: #BDD9F2;
+  }
 
-/*Das große Bild am Anfang der Über uns Seite*/
-.FrontPicture-Über-uns {
-  background-color: lightblue;
-  background-image: url('neues_Logo_original.jpeg');
-  height: 75%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
+  /*Das große Bild am Anfang der Über uns Seite*/
+  .FrontPicture-Logo {
+    background-color: lightblue;
+    background-image: url('neues_Logo_original.jpeg');
+    height: 75%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+  }
 
 
+  .ueberschrift-aboutus{
+    color: #FFFFFF;
+    text-shadow: 2px 2px 5px black;
+    font-weight: bold;
+  }
 
     .aboutus {
       padding-left: 10%;
