--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     }
 
     html {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Montserrat', sans-serif;
     }
 
     html p {
@@ -472,6 +472,19 @@
     }
 
     /*Tabelle mir den Technischen Daten */
+    .technical_data {
+      padding-left: 20%;
+      padding-right: 20%;
+      margin-bottom: 2rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      .technical_data {
+        padding-left: 0%;
+        padding-right: 0%;
+      }
+    }
+
     table {
       border-collapse: collapse;
       width: 100%;
