--- a/style.css
+++ b/style.css
@@ -237,11 +237,15 @@
 
 
     .werbespruch-startseite {
+      font-size: 1.5rem;
+      line-height: 120%;
       background-color: white;
       background-size: cover;
       background-position: center;
       color: black;
-      padding: 30px;
+      padding-left: 15%;
+      padding-right: 15%;
+      padding-top: 30px;
       text-align: center;
       margin: 0;
     }
@@ -251,7 +255,6 @@
     .container-startseite-mit-3-spalten {
       padding-left: 10%;
       padding-right: 10%;
-      padding-top: 30px;
       padding-bottom: 30px;
       background-color: #FFFFFF;
     }
