--- a/style.css
+++ b/style.css
@@ -57,157 +57,180 @@
 
     /*------------------------------ Anfang Style für die Navigationsleiste ---------------------------- */
 
-    /*------------Styles damit Navigationsleiste im Bild ist --------------------*/
-    .navigation-im-frontpicture{
-      position: top;
-      width: 100%;
-      background-color: transparent;
-      z-index:1;
-      padding-left: 30%;
-      padding-right: 30%;
+    .nav-bar {
+
+     height: 70px;
+     background: transparent;
     }
 
-    .Rest-float-right{
-      float: right;
+    .brand {
+     position: absolute;
+     padding-left: 20px;
+     float: left;
+     line-height: 70px;
+     text-transform: uppercase;
+     font-size: 1.4em;
+    }
+    .brand a img {
+     max-height: 70px;
+    }
+    .brand a,
+    .brand a:visited {
+     color: #ffffff;
+     text-decoration: none;
     }
 
-    .wrapper_header{
-      margin: auto;
+    .nav-container {
+     max-width: 1000px;
+     margin: 0 auto;
     }
 
-/* -----------Styles damit Navigationsleiste im Bild ist ----------------- */
-
-    .topnav img {
-      height: 25px;
+    nav {
+     float: right;
+    }
+    nav ul {
+     list-style: none;
+     margin: 0;
+     padding: 0;
+    }
+    nav ul li {
+     float: left;
+     position: relative;
+    }
+    nav ul li a,
+    nav ul li a:visited {
+     display: block;
+     padding: 0 20px;
+     line-height: 70px;
+     background: transparent;
+     color: black;
+     text-decoration: none;
+    }
+    nav ul li a:hover,
+    nav ul li a:visited:hover {
+     background: #6285B3;
+     color: black;
+    }
+    nav ul li a:not(:only-child):after,
+    nav ul li a:visited:not(:only-child):after {
+     padding-left: 4px;
+     content: ' ▾';
+    }
+    nav ul li ul li {
+     min-width: 190px;
+    }
+    nav ul li ul li a {
+     padding: 15px;
+     line-height: 20px;
     }
 
-    .topnav {
-      overflow: hidden;
-      background-color: none;
-      margin: 0px auto;
+    .nav-dropdown {
+     position: absolute;
+     display: none;
+     z-index: 1;
+     box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+    }
+    .nav-mobile {
+     display: none;
+     position: absolute;
+     top: 0;
+     right: 0;
+     background: #77A1D9;
+     height: 70px;
+     width: 70px;
     }
 
-    .topnav a {
-      float: left;
-      display: block;
-      color: white;
-      text-shadow: 1px 1px 3px black;
-      font-weight: bold;
-      text-align: center;
-      padding: 14px 14px;
-      text-decoration: none;
-      font-size: 17px;
-    }
+    @media only screen and (max-width: 798px) {
 
-    .active {
-      background-color: #77A1D9;
-      color: white;
-    }
-
-    .topnav .icon {
-      display: none;
-    }
-
-    .dropdown {
-      float: right;
-    }
-
-    .dropdown .dropbtn {
-      font-size: 17px;
-      border: none;
-      outline: none;
-      color: white;
-      text-shadow: 1px 1px 3px black;
-      font-weight: bold;
-      padding: 14px 14px;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #77A1D9;
-      min-width: 102px;
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      float: none;
-      color: white;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
-
-    .topnav a:hover, .dropdown:hover .dropbtn {
-      background-color: #77A1D9;
-      color: white;
-      text-shadow: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: white;
-      color: #77A1D9;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    @media screen and (max-width: 768px) {
-      .topnav a:not(:first-child), .dropdown .dropbtn {
-        display: none;
-      }
-      .topnav a.icon {
-        float: right;
-        display: block;
+      .nav-bar {
+        background-color: #77A1D9;
       }
 
-      .topnav.responsive {position: relative;}
-      .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-      .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
-      .topnav.responsive .dropdown {float: none;}
-      .topnav.responsive .dropdown-content {position: relative;}
-      .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-      }
+     .nav-mobile {
+       display: block;
+     }
 
-      .Rest-float-right{
-        float: left;
-      }
-      .home-ausblenden{
-        display: none;
-      }
+     nav {
+       width: 100%;
+       padding-top: 70px;
+       background-color: #77A1D9;
+     }
+     nav ul {
+       display: none;
+     }
+     nav ul li {
+       float: none;
+     }
+     nav ul li a {
+       padding: 15px;
+       line-height: 20px;
+     padding-left: 25%;
 
+     }
+     nav ul li ul li a {
+       padding-left: 30%;
+     }
+
+     .nav-dropdown {
+       position: static;
+     }
+     .brand a img {
+       max-height: 60px;
+       margin-top: 5px;
+     }
+    }
+    @media screen and (min-width: 799px) {
+     .nav-list {
+       display: block !important;
+     }
+    }
+    #nav-toggle {
+     position: absolute;
+     left: 18px;
+     top: 22px;
+     cursor: pointer;
+     padding: 10px 35px 16px 0px;
+    }
+    #nav-toggle span,
+    #nav-toggle span:before,
+    #nav-toggle span:after {
+     cursor: pointer;
+     border-radius: 1px;
+     height: 5px;
+     width: 35px;
+     background: #ffffff;
+     position: absolute;
+     display: block;
+     content: '';
+     transition: all 300ms ease-in-out;
+    }
+    #nav-toggle span:before {
+     top: -10px;
+    }
+    #nav-toggle span:after {
+     bottom: -10px;
+    }
+    #nav-toggle.active span {
+     background-color: transparent;
+    }
+    #nav-toggle.active span:before, #nav-toggle.active span:after {
+     top: 0;
+    }
+    #nav-toggle.active span:before {
+     transform: rotate(45deg);
+    }
+    #nav-toggle.active span:after {
+     transform: rotate(-45deg);
     }
 
-    @media screen and (max-width: 1200px) {
-    .navigation-im-frontpicture{
-      padding-left: 0;
-      padding-right: 0;
-    }
+    article {
+     max-width: 1000px;
+     margin: 0 auto;
+     padding: 10px;
     }
 
-    @media screen and (min-width: 768px) {
-    .home-ausblenden{
-      display: none;
-    }
-    }
 
     /*------------------------------ Ende Style für die Navigationsleiste ---------------------------- */
-
 
     /* ----------------------------- Styles für die Startseite --------------------------------------- */
 
