--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@
 
       .nav-bar {
         background-color: #77A1D9;
+        position: relative;
+        z-index: 1;        
       }
 
      .nav-mobile {
@@ -228,7 +230,6 @@
      margin: 0 auto;
      padding: 10px;
     }
-
 
     /*------------------------------ Ende Style für die Navigationsleiste ---------------------------- */
 
