--- a/style.css
+++ b/style.css
@@ -450,11 +450,20 @@
   }
 
   .Bild-Anpassung {
-    margin-top: 4%;
+    margin-top: 8%;
+    padding-left: 20px;
   }
 
   .Bild-Anpassung_2 {
-    margin-top: 6%;
+    margin-top: 8%;
+    padding-left: 20px;
+  }
+
+  @media screen and (max-width:768px) {
+    .Bild-Anpassung,
+    .Bild-Anpassung_2{
+      display: none;
+    }
   }
 
 
